[gd_scene load_steps=9 format=2]

[ext_resource path="res://5. User Interfaces/Start Menu/Start Menu.gd" type="Script" id=1]
[ext_resource path="res://5. User Interfaces/Level Map/Level Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://5. User Interfaces/Textures/Window/512_256/header_panel_A.png" type="Texture" id=3]
[ext_resource path="res://5. User Interfaces/Textures/Window/512_256/header_panel_B.png" type="Texture" id=4]
[ext_resource path="res://5. User Interfaces/Start Menu/Start Menu Button Font.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://5. User Interfaces/PixelMechaBold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = SubResource( 1 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
level_select = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.443137, 0.396078, 0.462745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_right = 517.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 54.0
margin_right = 517.0
margin_bottom = 124.0

[node name="Control3" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer"]
margin_right = 134.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 138.0
margin_right = 378.0
margin_bottom = 70.0
rect_min_size = Vector2( 240, 70 )
size_flags_horizontal = 0
texture = ExtResource( 3 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="Title" type="Label" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -15.0
margin_right = 56.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 20
text = "RoboNuke"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="ColorRect/NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 382.0
margin_right = 517.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 128.0
margin_right = 517.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 142.0
margin_right = 517.0
margin_bottom = 163.0

[node name="Start Button" type="Button" parent="ColorRect/NinePatchRect/VBoxContainer/CenterContainer"]
margin_left = 217.0
margin_right = 299.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 3 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 167.0
margin_right = 517.0
margin_bottom = 177.0
rect_min_size = Vector2( 0, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="ColorRect/NinePatchRect/VBoxContainer"]
margin_top = 181.0
margin_right = 517.0
margin_bottom = 202.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit Button" type="Button" parent="ColorRect/NinePatchRect/VBoxContainer/CenterContainer2"]
margin_left = 240.0
margin_right = 276.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 5 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ColorRect/NinePatchRect/VBoxContainer/CenterContainer/Start Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="ColorRect/NinePatchRect/VBoxContainer/CenterContainer2/Quit Button" to="." method="_on_Quit_Button_pressed"]
